tests/baselines/reference/jsxGenericTest03.errors.txt
tests/cases/conformance/jsxGeneric/file.tsx(10,10): error TS20014: Invalid JSX intrinsic factory
tests/cases/conformance/jsxGeneric/file.tsx(11,35): error TS2769: No overload matches this call.
  Overload 1 of 3, '(tagName: keyof HTMLElementTagNameMap, options?: ElementCreationOptions): HTMLElement | HTMLObjectElement | ... 68 more ... | HTMLVideoElement', gave the following error.
    Argument of type 'number | "div" | "span"' is not assignable to parameter of type 'keyof HTMLElementTagNameMap'.
      Type 'number' is not assignable to type 'keyof HTMLElementTagNameMap'.
  Overload 2 of 3, '(tagName: keyof HTMLElementDeprecatedTagNameMap, options?: ElementCreationOptions): HTMLPreElement', gave the following error.
    Argument of type 'number | "div" | "span"' is not assignable to parameter of type 'keyof HTMLElementDeprecatedTagNameMap'.
      Type 'number' is not assignable to type 'keyof HTMLElementDeprecatedTagNameMap'.
  Overload 3 of 3, '(tagName: string, options?: ElementCreationOptions): HTMLElement', gave the following error.
    Argument of type 'number | "div" | "span"' is not assignable to parameter of type 'string'.
      Type 'number' is not assignable to type 'string'.
tests/cases/conformance/jsxGeneric/file.tsx(15,12): error TS20001: Intrinsic JSX element 'div' does not exist in factory 'createElement'.
tests/cases/conformance/jsxGeneric/file.tsx(16,17): error TS20001: Intrinsic JSX element 'span' does not exist in factory 'createElement'.


==== tests/cases/conformance/jsxGeneric/file.tsx (4 errors) ====
    /* @jsx-mode generic */
    /* @jsx-intrinsic-factory createElement */
    
    interface HTMLAttributes {
        class?:     string;
        id?:        string;
        onclick?:   (this: HTMLElement, ev: MouseEvent) => void;
    }
     
    function createElement(tagName:"div"|"span"|number, attrs?: HTMLAttributes, ...children:HTMLElement[]): HTMLElement {
             ~~~~~~~~~~~~~
!!! error TS20014: Invalid JSX intrinsic factory
        return document.createElement(tagName);
                                      ~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 3, '(tagName: keyof HTMLElementTagNameMap, options?: ElementCreationOptions): HTMLElement | HTMLObjectElement | ... 68 more ... | HTMLVideoElement', gave the following error.
!!! error TS2769:     Argument of type 'number | "div" | "span"' is not assignable to parameter of type 'keyof HTMLElementTagNameMap'.
!!! error TS2769:       Type 'number' is not assignable to type 'keyof HTMLElementTagNameMap'.
!!! error TS2769:   Overload 2 of 3, '(tagName: keyof HTMLElementDeprecatedTagNameMap, options?: ElementCreationOptions): HTMLPreElement', gave the following error.
!!! error TS2769:     Argument of type 'number | "div" | "span"' is not assignable to parameter of type 'keyof HTMLElementDeprecatedTagNameMap'.
!!! error TS2769:       Type 'number' is not assignable to type 'keyof HTMLElementDeprecatedTagNameMap'.
!!! error TS2769:   Overload 3 of 3, '(tagName: string, options?: ElementCreationOptions): HTMLElement', gave the following error.
!!! error TS2769:     Argument of type 'number | "div" | "span"' is not assignable to parameter of type 'string'.
!!! error TS2769:       Type 'number' is not assignable to type 'string'.
    }
    
    function test() {
        return <div class="test">
               ~~~~~~~~~~~~~~~~~~
!!! error TS20001: Intrinsic JSX element 'div' does not exist in factory 'createElement'.
                    <span/>
                    ~~~~~~~
!!! error TS20001: Intrinsic JSX element 'span' does not exist in factory 'createElement'.
               </div>;
    }